k8s/ingress.yml
apiVersion: 'networking.k8s.io/v1beta1'
kind: 'Ingress'
metadata:
  name: 'pithy-ingress'
spec:
  backend:
    serviceName: 'pithy-api-svc'
    servicePort: 8000
